# m_ker

./: .gitignore  README.md
.github/workflows/: build_encoder_tool_windows.yml
docs/: README_CN.md
docs/firmware/: ENCODER_FIRMWARE_CN.md  M5_FIRMWARE_CN.md
docs/ros2/: ROS2_TELEOP_CN.md
firmware/: .editorconfig  .pre-commit-config.yaml  README.md  USAGE_CN.md
firmware/M5/: .gitignore  README.md  platformio.ini  sdkconfig.defaults
firmware/M5/include/: AngleProcessor.h  Common.h  GUIHandler.h  Meta.h  RSNexus.h  SerialStream.h  StreamTypes.h  USBStream.h  WiFiConfig.example.h  WiFiStream.h
firmware/M5/src/: GUIHandler.cpp  RSNexus.cpp  SerialStream.cpp  USBStream.cpp  WiFiStream.cpp  main.cpp
firmware/encoder/: .gitignore  README.md  compile_commands.json  platformio.ini
firmware/encoder/firmware/: firmware_ID01.hex  firmware_ID02.hex  firmware_ID03.hex  firmware_ID04.hex  firmware_ID05.hex  firmware_ID06.hex  firmware_ID07.hex  firmware_ID08.hex  firmware_ID09.hex  firmware_ID10.hex  firmware_ID11.hex  firmware_ID12.hex  firmware_ID13.hex  firmware_ID14.hex  firmware_ID15.hex  firmware_ID16.hex  firmware_ID17.hex  firmware_ID18.hex  firmware_ID19.hex  firmware_ID20.hex  test_blink.ino.hex
firmware/encoder/src/: main copy.cpp.bak  main.cpp
firmware/test/: scan_id.py  sniffer.py  test.py  test_flet.py  test_flet_service.py  test_flet_service2.py  wifi_stream_test.py
openflex_KER/: KER_1_7_SIGNAL_AND_TELEOP_PLAN_CN.md  KER_OPENARMX_RVIZ_SIM_CALIBRATION_GUIDE_CN.md  NOTICE  OFFICIAL_DORA_OPENARM_RVIZ_GUIDE_CN.md  README_CN.md  WIFI_TRANSPORT_IMPLEMENTATION_SUMMARY_CN.md  WIFI_TRANSPORT_PLAN_CN.md  install_ros2_humble.sh
openflex_KER/openflex_teleop_ker/: CALIBRATION_CN.md  README_CN.md  package.xml
openflex_KER/openflex_teleop_ker/config/: openflex_ker.yaml
openflex_KER/openflex_teleop_ker/launch/: openflex_ker_right_sim_teleop.launch.py  openflex_ker_rviz_sim.launch.py  openflex_ker_teleop.launch.py
openflex_KER/openflex_teleop_ker/openflex_teleop_ker/: __init__.py  arm_bridge_node.py  ker_driver_node.py  pose_processor.py
openflex_KER/openflex_teleop_ker/test/: test_pose_processor.py
openflex_KER/openflex_tool/openflex_ker_joint_panel/: CMakeLists.txt  README_CN.md  package.xml  setup.cfg
openflex_KER/openflex_tool/openflex_ker_joint_panel/include/openflex_ker_joint_panel/: joint_angle_panel.hpp
openflex_KER/openflex_tool/openflex_ker_joint_panel/src/: joint_angle_panel.cpp
openflex_KER/ros2_ws/install/: local_setup.sh  setup.sh
openflex_KER/ros2_ws/install/openflex_ker_joint_panel/share/openflex_ker_joint_panel/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
openflex_KER/ros2_ws/install/openflex_teleop_ker/share/openflex_teleop_ker/: package.bash  (+4 more)
openflex_KER/ros2_ws/src/openflex_ker_joint_panel/src/: joint_angle_panel.cpp
openflex_KER/ros2_ws/src/openflex_teleop_ker/: setup.cfg  setup.py
openflex_KER/ros2_ws/src/openflex_teleop_ker/openflex_teleop_ker/: arm_bridge_node.py  pose_processor.py
openflex_KER/ros2_ws/src/openflex_teleop_ker/test/: test_ker_stream.py  test_pose_processor.py
tool/: build_windows.bat  encoder_flash_cli.py  encoder_tool.py  encoder_tool_backend.py  requirements-windows.txt
tool/encoder_tool/_internal/jsonschema-4.26.0.dist-info/: RECORD
tool/encoder_tool/_internal/matplotlib/mpl-data/: matplotlibrc
tool/encoder_tool/_internal/msgpack/: _cmsgpack.cp310-win_amd64.pyd
tool/encoder_tool/_internal/nbformat-5.10.4.dist-info/: RECORD
tool/encoder_tool/hex/encoder/: firmware_ID01.hex  firmware_ID02.hex  firmware_ID03.hex  firmware_ID04.hex  firmware_ID05.hex  firmware_ID06.hex  firmware_ID07.hex  firmware_ID08.hex  firmware_ID09.hex  firmware_ID10.hex  firmware_ID11.hex  firmware_ID12.hex  firmware_ID13.hex  firmware_ID14.hex  firmware_ID15.hex  firmware_ID16.hex
(+7 files in other folders)
