<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>openflex_teleop_ker</name>
  <version>0.2.0</version>
  <description>OpenArm KER USB, serial, and WiFi teleoperation adapter for OpenFlex.</description>
  <maintainer email="openarmrobot@gmail.com">Chengdu Changshu Robot Co., Ltd</maintainer>
  <license>OpenArmX Research and Education License</license>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>openarmx_bringup</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>rcl_interfaces</exec_depend>
  <exec_depend>python3-serial</exec_depend>
  <exec_depend>python3-usb</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
